# fastapi-template

./: .env.testing  .flake8  .gitignore  DEPLOY.md  LICENSE  README.md  backend.dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env-example  gunicorn_conf.py  mypy.ini  pyproject.toml  requirements.txt  tests-start.sh
.do/: deploy.template.yaml
.github/workflows/: test.yml
alembic/versions/: 5d41245dc5d2_initial_revision.py  f92f11243217_initial_revision.py
app/: main.py  utils.py
app/api/: deps.py  exceptions.py  translations.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  items.py  users.py  utils.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_file.py  crud_item.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py
app/email_service/: auth.py  base.py  test.py
app/email_service/templates/src/: new_account.mjml  reset_password.mjml
app/models/: __init__.py  archivable.py  file.py  item.py  soft_deletable.py  user.py
app/schemas/: __init__.py  archivable.py  file.py  item.py  token.py  user.py
app/tests/api/api_v1/: test_exceptions_translations.py  test_items.py  test_login.py  test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py  utils.py
scripts/: build.sh  deploy.sh  format.sh  migrate.sh  new-revision.sh  start-reload.sh  start.sh  test-local.sh  test.sh  tests-start.sh
translations/: en.json  fr.json
