[project]
name = "fastapi-template"
version = "0.1.0"
description = "A template project to create an API with file management, user authentication and PostgreSQL database."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    "Jonathan Bereyziat <jonathan@bereyziat.dev>"
]

dependencies = [
    "alembic>=1.14.0",
    "emails>=0.6",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.4",
    "pyjwt>=2.10.1",
    "fastapi-sso>=0.17.0",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "black>=24.10.0",
    "autoflake>=2.3.1",
    "sqlalchemy-stubs>=0.4",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


